tests/cmd_prefix_bad.out
./cmd_prefix_bad.svx:3:2: warning: *prefix is deprecated - use *begin and *end instead
 *prefix
  ^~~~~~
./cmd_prefix_bad.svx:3:8: error: Expecting survey name
 *prefix
        ^

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...

Calculating statistics...

Survey contains 2 survey stations, joined by 1 leg.
There are 0 loops.
Total length of survey legs =    1.00m (   1.00m adjusted)
Total plan length of survey legs =    1.00m
Total vertical length of survey legs =    0.00m
Vertical range = 0.00m (from 2 at 0.00m to 2 at 0.00m)
North-South range = 1.00m (from 2 at 1.00m to 1 at 0.00m)
East-West range = 0.00m (from 2 at 0.00m to 2 at 0.00m)
   2 1-nodes.
There were 1 warning(s) and 1 error(s) - no output files produced.
