tests/cmd_prefix_bad.svx
; pos=fail warn=1 error=1
; this should give an error
*prefix
*fix 1 0 0 0
1 2 1 0 0
